--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign in page</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="stylesheet"
       href="preconnect"
@@ -19,7 +19,7 @@
   <body>
     <div class="container">
       <div class="unnamed">
-        <img src="/assets/images/unnamed.jpg" />
+        <img src="./assets/images/unnamed.jpg" />
       </div>
       <div id="A">
         <div id="A1">
@@ -53,17 +53,17 @@
         </div>
         <div id="H">
           <div id="img1">
-            <img src="/assets/images/google.png" alt="#" width="35px" />
+            <img src="./assets/images/google.png" alt="#" width="35px" />
           </div>
           <div id="img2">
-            <img src="/assets/images/apple.png" alt="#" width="35px" />
+            <img src="./assets/images/apple.png" alt="#" width="35px" />
           </div>
           <div id="img3">
-            <img src="/assets/images/facebook.png" alt="#" width="35px" />
+            <img src="./assets/images/facebook.png" alt="#" width="35px" />
           </div>
         </div>
       </div>
     </div>
-    <script src="/assets/index.js"></script>
+    <script src="./assets/index.js"></script>
   </body>
 </html>
