--- a/index.html
+++ b/index.html
@@ -36,17 +36,20 @@
         </div>
         <div id="D">
           <div id="D1">
-            <input type="text" placeholder="Enter username" />
+            <input id="username" type="text" placeholder="Enter username" />
           </div>
           <div id="D2">
-            <input type="password" placeholder="Password" />
+            <input id="password" type="password" placeholder="Password" />
           </div>
         </div>
         <div id="E">
           <p>Recovery Password</p>
         </div>
         <div id="F">
-          <button onclick="alertUser()">Sign In</button>
+          <button onclick="validateSignin()">Sign In</button>
+        </div>
+        <div>
+          <p id="result"></p>
         </div>
         <div id="G">
           <p>Or continue with</p>
@@ -64,6 +67,6 @@
         </div>
       </div>
     </div>
-    <script src="./assets/index.js"></script>
+    <script src="/assets/index.js"></script>
   </body>
 </html>
